--- a/openClash-mini.ini
+++ b/openClash-mini.ini
@@ -16,6 +16,7 @@ custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-手动`[]所有-自动`[
 custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]IPv6-自动`[]REJECT
 
 ;3、节点组
+custom_proxy_group=所有-手动`select`.*
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`60,150
 
