--- a/openClash-mini.ini
+++ b/openClash-mini.ini
@@ -1,4 +1,6 @@
 ;1、域名组
+ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
+ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=👩‍👧‍👦 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
@@ -10,15 +12,14 @@ ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=👩‍👧‍👦 TikTok`select`[]DIRECT`[]所有-手动`[]所有-自动`[]IPv6-自动`[]REJECT
-custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]所有-手动`[]所有-自动`[]IPv6-自动`[]REJECT
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-手动`[]所有-自动`[]IPv6-自动`[]REJECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]IPv6-自动`[]REJECT
+custom_proxy_group=👩‍👧‍👦 TikTok`select`[]所有-自动
+custom_proxy_group=🙋 Telegram`select`[]所有-自动
+custom_proxy_group=🎥 流媒体`select`[]所有-自动
+custom_proxy_group=🌍 国外`select`[]所有-自动
+custom_proxy_group=➡️ 国内`select`[]DIRECT`
 
 ;3、节点组
-custom_proxy_group=所有-手动`select`.*
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`60,150
 
 ;4、启用规则集
 enable_rule_generator=true
