--- a/openClash-mini.ini
+++ b/openClash-mini.ini
@@ -14,6 +14,7 @@ ruleset=➡️ 国内,[]FINAL
 ;2、策略组（域名组-节点组）
 custom_proxy_group=👩‍👧‍👦 TikTok`select`[]所有-自动
 custom_proxy_group=🙋 Telegram`select`[]所有-自动
+custom_proxy_group=📘 GitHub`select`[]所有-自动
 custom_proxy_group=🎥 流媒体`select`[]所有-自动
 custom_proxy_group=🌍 国外`select`[]所有-自动
 custom_proxy_group=➡️ 国内`select`[]DIRECT`
