--- a/openClash-mini.ini
+++ b/openClash-mini.ini
@@ -1,23 +1,23 @@
 ;1、域名组
-ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
-ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=👩‍👧‍👦 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
-ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
-ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
-ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-;ruleset=➡️ 国内,https:///raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Direct.list
-ruleset=🌍 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
-ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
-ruleset=➡️ 国内,[]FINAL
+ruleset=GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
+ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
+ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
+ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
+;ruleset=国内,https:///raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Direct.list
+ruleset=国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
+ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+ruleset=国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=👩‍👧‍👦 TikTok`select`[]所有-自动
-custom_proxy_group=🙋 Telegram`select`[]所有-自动
-custom_proxy_group=📘 GitHub`select`[]所有-自动
-custom_proxy_group=🎥 流媒体`select`[]所有-自动
-custom_proxy_group=🌍 国外`select`[]所有-自动
-custom_proxy_group=➡️ 国内`select`[]DIRECT`
+custom_proxy_group=TikTok`select`[]所有-自动
+custom_proxy_group=Telegram`select`[]所有-自动
+custom_proxy_group=GitHub`select`[]所有-自动
+custom_proxy_group=流媒体`select`[]所有-自动
+custom_proxy_group=国外`select`[]所有-自动
+custom_proxy_group=国内`select`[]DIRECT`
 
 ;3、节点组
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
